# parmetis

./: CMakeLists.txt  README.md
libparmetis/: CMakeLists.txt
metis/: CMakeLists.txt
metis/include/: CMakeLists.txt  metis.h.in
programs/: CMakeLists.txt
